Update 'backend-tests-go-wijgfgsg' component image to: quay.io/rhtap_qe/backend-tests-go-wijgfgsg:26079d90a459726e6488cbaa82984f93c1958927@sha256:ccd9f25260827d06f421505e9b5a9442fe9c30168082e5219692927f2feaf363

--- a/components/backend-tests-go-wijgfgsg/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-wijgfgsg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-wijgfgsg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-wijgfgsg:26079d90a459726e6488cbaa82984f93c1958927@sha256:ccd9f25260827d06f421505e9b5a9442fe9c30168082e5219692927f2feaf363
+          name: container-image
